--- a/TrainStation/TrainStation.csproj
+++ b/TrainStation/TrainStation.csproj
@@ -50,6 +50,8 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -69,6 +71,7 @@
     <Compile Include="Passanger.cs" />
     <Compile Include="Ticket.cs" />
     <Compile Include="Deb.cs" />
+    <Compile Include="SerailizationAndDeserealization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
