--- a/TrainStation/TrainStation.csproj
+++ b/TrainStation/TrainStation.csproj
@@ -76,5 +76,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
