--- a/TrainStation/TrainStation.csproj
+++ b/TrainStation/TrainStation.csproj
@@ -64,14 +64,14 @@
     <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Station.cs" />
-    <Compile Include="Train.cs" />
-    <Compile Include="Van.cs" />
-    <Compile Include="Seat.cs" />
-    <Compile Include="Passanger.cs" />
-    <Compile Include="Ticket.cs" />
     <Compile Include="Deb.cs" />
-    <Compile Include="SerailizationAndDeserealization.cs" />
+    <Compile Include="Models\Van.cs" />
+    <Compile Include="Models\Station.cs" />
+    <Compile Include="Models\Passanger.cs" />
+    <Compile Include="Models\Seat.cs" />
+    <Compile Include="Models\SerailizationAndDeserealization.cs" />
+    <Compile Include="Models\Ticket.cs" />
+    <Compile Include="Models\Train.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
