--- a/TrainStation/TrainStation.csproj
+++ b/TrainStation/TrainStation.csproj
@@ -69,15 +69,17 @@
     <Compile Include="Models\Station.cs" />
     <Compile Include="Models\Passanger.cs" />
     <Compile Include="Models\Seat.cs" />
-    <Compile Include="Models\SerailizationAndDeserealization.cs" />
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Models\Train.cs" />
+    <Compile Include="DataAccess\SerailizationAndDeserealization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Test\" />
+    <Folder Include="DataAccess\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
